# dimos

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  SimSun.ttf.REMOVED.git-id  changes.md  default.env  flake.nix  mkdocs.yml  pyproject.toml  requirements-cpu.txt  requirements.txt  setup.py  uv.lock.REMOVED.git-id  yolo11n.pt.REMOVED.git-id
.devcontainer/: devcontainer.json
.github/workflows/: _docker-build-template.yml  code-cleanup.yml  docker.yml  tests.yml
.openclaw/: smart_nav_state.json
assets/agent/: prompt.txt  prompt_agents2.txt
autoresearch/: optimizations.py
dimos/: __init__.py  conftest.py  constants.py  porcelain.py  test_porcelain.py
dimos/agents/: __init__.py  agent.py  agent_config.py  agent_ctransformers_gguf.py  agent_huggingface_local.py  agent_huggingface_remote.py  agent_message.py  agent_types.py  cerebras_agent.py  claude_agent.py  conftest.py  planning_agent.py  test_agent.py  test_agent_direct.py  test_agent_message_streams.py  test_agent_with_modules.py  test_conversation_history.py  test_mock_agent.py  test_stash_agent.py  vlm_stream_tester.py  voice.py  voice_control.py  web_human_input.py
dimos/agents2/: agent.py  spec.py  test_agent.py  test_mock_agent.py  test_stash_agent.py  testing.py
dimos/agents_deprecated/: agent.py
dimos/control/: __init__.py  blueprints.py  coordinator.py  hardware_interface.py  orchestrator.py  tick_loop.py
dimos/core/: __init__.py  arduino_module.py  blueprints.py  core.py  daemon.py  docker_build.py  docker_module.py  docker_runner.py  docker_worker_manager.py  global_config.py  module.py  module_coordinator.py  module_dask.py  native_module.py  resource.py  rpc_client.py  run_registry.py  scratch.py  shared_memory_transport.py  stream.py  test_blueprints.py  test_cli_stop_status.py  test_core.py  test_daemon.py  test_e2e_daemon.py  test_global_config.py  test_modules.py  test_native_module.py  test_native_rebuild.py  test_per_run_logs.py  test_stream.py  test_worker.py  testing.py  transport.py  worker.py  worker_manager.py  worker_manager_docker.py  worker_manager_python.py
dimos/dashboard/: __init__.py  module.py  rerun_init.py  server.py  tf_rerun_module.py
dimos/data/: data_pipeline.py  videostream-data-pipeline.md
dimos/e2e_tests/: conftest.py  dimos_cli_call.py  lcm_spy.py  test_control_coordinator.py  test_dimos_cli_e2e.py  test_dimsim_eval.py  test_dimsim_eval_parallel.py  test_dimsim_nav.py  test_manipulation_module.py  test_patrol_and_follow.py  test_person_follow.py  test_scene_client.py  test_scene_editing.py  test_security_module.py  test_simulation_module.py  test_smartnav_replay.py  test_spatial_memory.py
dimos/environment/: agent_environment.py
dimos/grasping/: __init__.py  graspgen_module.py  temp_graspgen_testing.py
dimos/hardware/: ardupilot.py  piper_arm.py  r1pro_ros_env.py  ufactory.py  webcam.py  zed_camera.py
dimos/hardware/arduino/cpp/: CMakeLists.txt  main.cpp
dimos/hardware/arduino/test/: CMakeLists.txt  flake.nix  test_wire_compat.cpp
dimos/manipulation/: blueprints.py  manip_aio_pipeline.py  manip_aio_processer.py  manipulation_blueprints.py  manipulation_history.py  manipulation_interface.py  manipulation_module.py  manipulation_skills.py  test_manipulation_history.py  test_manipulation_module.py  test_manipulation_unit.py  utils.py
dimos/mapping/: costmapper.py  test_voxels.py  types.py  voxels.py
docs/: README.md  SUMMARY.md  VIEWER_BACKENDS.md  depth_camera_integration.md  development.md  hooks.py  index.md  jetson.MD  requirements.md  transport_summary.md  zenoh_transport.md
native/rust/: Cargo.toml
native/rust/examples/: rust_ping_pong.py
native/rust/src/: module.rs
ros_docker_integration/: Dockerfile  README.md  docker-compose.yml  ros_launch_wrapper.py  run_both.sh  run_command.sh  shell.sh  start.sh  start_clean.sh  test_integration.sh
scripts/: install.sh  run_inference.py
tests/: run.py  run_go2_ros.py  run_webrtc.py  test_agent_alibaba.py  test_cerebras_agent_query.py  test_cerebras_agent_skills.py  test_claude_agent_skills_query.py  test_image_backends.py  test_manipulation_pipeline_single_frame.py  test_navigate_to_object_robot.py  test_navigation_skills.py  test_object_detection_agent_data_query_stream.py  test_object_detection_stream.py  test_person_following_robot.py  test_person_following_webcam.py  test_planning_robot_agent.py  test_robot.py  test_rtsp_video_provider.py  test_semantic_seg_robot.py  test_semantic_seg_webcam.py  test_skills_rest.py  test_unitree_agent.py  test_vr_metaquest.py  test_webrtc_queue.py  test_websocketvis.py  visualization_script.py  zed_neural_depth_demo.py
(+1006 files in other folders)
