[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dimos"
version = "0.1.0"
description = "A fork of dimensionalOS/dimos — modular robotics and agent orchestration framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "dimos contributors" }
]
keywords = ["robotics", "agents", "llm", "ros2", "orchestration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "pydantic>=2.0",
  "httpx>=0.27",
  "openai>=1.0",
  "python-dotenv>=1.0",
  "reactivex>=4.0",
  "pillow>=10.0",
  "numpy>=1.26",
  "rich>=13.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "pre-commit>=3.7",
]
ros = [
  "rclpy",
]
vision = [
  "opencv-python>=4.9",
  "torch>=2.0",
  "torchvision>=0.17",
]

[project.scripts]
dimos = "dimos.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["dimos"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Removed --cov flags so a quick `pytest` run doesn't require pytest-cov to be installed
addopts = "-v"
