[package]
name = "dimos-native-module"
version = "0.1.0"
edition = "2021"
description = "Rust native module SDK for dimos NativeModule framework"
license = "Apache-2.0"

[dependencies]
dimos-lcm = { git = "https://github.com/dimensionalOS/dimos-lcm.git", branch = "rust-codegen" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
lcm-msgs = { git = "https://github.com/dimensionalOS/dimos-lcm.git", branch = "rust-codegen" }
